RESOLVED FIXED302233
Check exceptions when accessing objects in JavaScriptEvaluationResult
https://bugs.webkit.org/show_bug.cgi?id=302233
Summary Check exceptions when accessing objects in JavaScriptEvaluationResult
Alex Christensen
Reported 2025-11-09 19:20:08 PST
Attachments
Alex Christensen
Comment 1 2025-11-09 19:28:32 PST
EWS
Comment 2 2025-11-09 21:57:21 PST
Committed 302783@main (b29de83f5f56): <https://commits.webkit.org/302783@main> Reviewed commits have been landed. Closing PR #53654 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.