Check exceptions when accessing objects in JavaScriptEvaluationResult https://bugs.webkit.org/show_bug.cgi?id=302233 rdar://164271319

Reviewed by Chris Dumez.

This fixes a crash I introduced with JavaScriptEvaluationResult.

SerializedScript value has many checks like this:
if (scope.exception()) [[unlikely]]
This introduces equivalent checks, but they look a little different
because in JavaScriptEvaluationResult we're using the C API of JS.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm

* Source/WebKit/Shared/JavaScriptEvaluationResult.cpp:
(WebKit::JavaScriptEvaluationResult::JSExtractor::toValue):
(WebKit::JavaScriptEvaluationResult::JSInserter::toJS):
(WebKit::JavaScriptEvaluationResult::toJS):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
(ExceptionAccessingProperty)):

Canonical link: https://commits.webkit.org/302783@main